--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   <script>
     function actualitzaDesplegables() {
       var gen1 = document.getElementById("gen1").value;
-      var gen2Div = document.getElementById("gen2");
-      var fenotip2Div = document.getElementById("fenotip2");
+      var gen2 = document.getElementById("gen2");
+      var fenotip2 = document.getElementById("fenotip2");
 
       gen2.disabled = !gen1;
       fenotip2.disabled = !gen2.value;
