--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
   <select id="fenotip1">
       <option value="">Selecciona un fenotip</option>
     </select>
-
-  <br><br>
   
 <div id="gen2">
   <label for="gen2">Gen 2:</label>
@@ -55,11 +53,9 @@
   </select>
 </div>
   
-  <br><br>
-  
   <div id="fenotip2">
   <label for="fenotip2">Fenotip 2:</label>
-  <select id="fenotip2" disabled></select>
+  <select id="fenotip2" disabled>
   <option value="">Selecciona un fenotip</option>
   </select>
   </div>
