--- a/index.html
+++ b/index.html
@@ -50,28 +50,30 @@
   
 <div id="gen2">
   <label for="gen2">Gen 2:</label>
-  <select id="gen2" onchange="actualitzaDesplegables()"></select>
+  <select id="gen2" onchange="actualitzaDesplegables()" disabled></select>
   <option value="">Selecciona un gen</option>
   </select>
 </div>
 
   <br><br>
   
-  <div id="fenotip2">
+  <div id="fenotip2" disabled>
   <label for="fenotip2">Fenotip 2:</label>
-  <select id="fenotip2" disabled>
+  <select id="fenotip2">
   <option value="">Selecciona un fenotip</option>
   </select>
   </div>
   
   <script>
     function actualitzaDesplegables() {
-      var gen1 = document.getElementById("gen1").value;
-      var gen2 = document.getElementById("gen2");
-      var fenotip2 = document.getElementById("fenotip2");
- }
-      gen2.disabled = !gen1;
-      fenotip2.disabled = !gen2.value;
+     const gen1 = document.getElementById("gen1").value;
+      const gen2 = document.getElementById("gen2");
+      const fenotip2 = document.getElementById("fenotip2");
+  console.log("Gen1:", gen1, "gen2.disabled?", gen2.disabled, "fenotip2.disabled?", fenotip2.disabled);
+
+gen2.disabled = !gen1;
+  fenotip2.disabled = !gen2.value;
+} 
 
     window.onload = actualitzaDesplegables;
   </script>
