--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
   <label for="gen2">Gen 2:</label>
   <select id="gen2" onchange="actualitzaDesplegables()" disabled></select>
   <option value="">Selecciona un gen</option>
-  </select>
 </div>
 
   <br><br>
   
-  <div id="fenotip2" disabled>
+  <div id="fenotip2">
   <label for="fenotip2">Fenotip 2:</label>
-  <select id="fenotip2">
+  <select id="fenotip2" disabled>
   <option value="">Selecciona un fenotip</option>
   </select>
   </div>
